2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-flet): Remove.
	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Don't use it.

2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-labels): Use cl-labels if available.

2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-flet, gmm-labels): New macros.

	* gnus-sync.el (gnus-sync-lesync-call)
	* message.el (message-read-from-minibuffer): Use gmm-flet.

	* gnus-score.el (gnus-score-decode-text-parts): Use gmm-labels.

	* gnus-util.el (gnus-macroexpand-all): Remove.

2012-12-03  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-sum.el (gnus-summary-mode-map): Bind gnus-summary-widget-forward
	to TAB, not [tab].
	(gnus-summary-article-map): Likewise.

	* gnus-sync.el (gnus-sync-newsrc-offsets): Restore definition.
	(gnus-sync-save): Use correct format for gnus-sync-newsrc-loader.

2012-11-21  Paul Eggert  <eggert@cs.ucla.edu>

	* time-date.el: Commentary fix.

2012-11-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* color.el: Don't require cl.
	(color-complement): `caddr' -> `nth 2'.

	* time-date.el (time-to-seconds): De-obsolete.

2012-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-get-reply-headers):
	Make sure the reply goes to the author if it is a wide reply.

2012-11-16  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-score.el (gnus-score-body):
	* gnus-logic.el (gnus-advanced-body): Don't score by headers when
	scoring by body.

2012-11-16  Glenn Morris  <rgm@gnu.org>

	* gnus-diary.el (nndiary-request-create-group-functions)
	(nndiary-request-update-info-functions)
	(gnus-subscribe-newsgroup-functions)
	(nndiary-request-accept-article-functions):
	Use new names for hooks rather than obsolete aliases.

2012-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el (define-obsolete-variable-alias): Simplify.

2012-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>
