@@ -1,5 +1,11 @@
 2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* gmm-utils.el (gmm-flet): Restore it using cl-letf.
+	* gnus-sync.el (gnus-sync-lesync-call)
+	* message.el (message-read-from-minibuffer): Use it.
+
+2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* gmm-utils.el (gmm-flet): Remove.
 	* gnus-sync.el (gnus-sync-lesync-call)
 	* message.el (message-read-from-minibuffer): Don't use it.
